# Venom_VNV

./: .gitmodules  Makefile  README.md  README_EN.md  mkdocs.yml
.github/workflows/: build.yml
docs/: _config.yml  armor_detector.md  armor_tracker.md  chassis_driver.md  index.md  livox_ros_driver2.md  localization_overview.md  point_lio.md  px4_bridge_handoff_2026-04-17.md  rf2o_laser_odometry.md  rm_auto_aim.md  ros2_hik_camera.md  setup.md  small_gicp_relocalization.md  style.css  tf_tree.md  topics.md  venom_bringup.md  venom_robot_description.md  venom_serial_driver.md
docs/_data/: navigation.yml  navigation_en.yml
docs/_includes/: sidebar.html
docs/_layouts/: default.html
docs/deployment/: environment.md  index.md  lidar_setup.md  piper_can_setup.md  rc_local.md  run_modes.md  system_overview.md
docs/en/: index.md
docs/home/: index.md  launch_usage.md  quick_start.md
docs/modules/: architecture.md  index.md  (+1 more)
simple_commander_demo/: README.md  package.xml  setup.cfg  setup.py
venom_bringup/: README.md  package.xml  setup.py
venom_mission_commander/: README.md  package.xml  setup.cfg  setup.py
venom_mission_commander/config/: competition_mission_template.yaml  rmul_sim_mission.yaml  simple_mission.yaml
venom_mission_commander/docs/: FUTURE_DYNAMIC_MISSION_BRANCH.md  INTEGRATION_ROADMAP.md  TASK_PLUGIN_INTEGRATION_GUIDE.md
venom_mission_commander/launch/: mission_commander.launch.py  mission_commander_nav2_sim.launch.py
venom_mission_commander/venom_mission_commander/: __init__.py  mission_commander.py  mission_loader.py  mission_manager.py  models.py  navigator.py  task_plugins.py  task_runner.py
venom_robot_description/: README.md  package.xml  setup.py
venom_robot_description/config/: infantry.yaml  scout_mini.yaml  sentry.yaml
venom_robot_description/launch/: infantry_description.launch.py  sentry_description.launch.py
venom_robot_description/venom_robot_description/: dynamic_tf_publisher.py
(+134 files in other folders)
