<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>venom_robot_description</name>
  <version>0.0.1</version>
  <description>Venom robot static TF publisher using robot_state_publisher and static_transform_publisher</description>
  <maintainer email="venom@todo.todo">venom</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
